<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ConnectorActivity">

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_margin="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textSize="18sp"
            />
        <TextView
            android:id="@+id/status_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/description"
            android:layout_margin="10dp"
            android:text="@string/status_default"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/host_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/status_display"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:hint="@string/host"
            android:layout_margin="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textUri"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/port_num_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/host_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:hint="@string/port"
            android:layout_margin="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/topic_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/port_num_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:hint="@string/topic"
            android:layout_margin="10dp"
            android:layout_marginBottom="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/connect_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/connect"
            android:layout_margin="10dp"
            app:layout_constraintHorizontal_bias="0.85"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topic_text"
            />
        <Button
            android:id="@+id/disconnect_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/disconnect"
            app:layout_constraintTop_toBottomOf="@id/connect_button"
            app:layout_constraintLeft_toLeftOf="@id/connect_button"
            />

        <TextView
            android:id="@+id/choice_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_controller"
            app:layout_constraintTop_toBottomOf="@id/disconnect_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="40dp"
            android:textSize="20sp"
            />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/choice_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="20dp">
            <RadioButton
                android:id="@+id/radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_button"
                android:onClick="onChoiceSelect"/>
            <RadioButton
                android:id="@+id/radio_gyro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_gyro"
                android:onClick="onChoiceSelect"/>
            <RadioButton
                android:id="@+id/radio_joystick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_joystick"
                android:onClick="onChoiceSelect"/>
        </RadioGroup>
        <Button
            android:id="@+id/proceed_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proceed"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/radio_group"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
